tests/NormalTests/paczka1/small_fuzzy/96924888.err
Error in line 5: rfB9jDh S478 89,4
Error in line 10: uA14xVAL S18 20,8
Error in line 13: RHspGqc5YhT S478 32,2
